--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                 <div class="contact-info">
                     <p>I'm currently open to new opportunities and collaborations.</p>
                     <div class="social-links">
-                        <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/hetch-4" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="www.linkedin.com/in/jeff-h-m-dev" target="_blank"><i class="fab fa-linkedin"></i></a>
                         <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
