--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <div class="notification" id="notification"></div>
 
     <footer>
-        <p>&copy; 2024 jepj. All rights reserved.</p>
+        <p>&copy; 2024 jh. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
